# socketcan_cpp

./: .gitignore  CMakeLists.txt  README.md
include/socketcan_cpp/: SocketCAN.hpp
src/: SocketCAN.cpp  main.cpp
tests/: MyTests.cpp
